--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   					<div class="dropdown">
   					<div class="dropbtn">Travaux</div>
   					<div class="dropdown-content">
-  						<a href="pages/son.html">Audiovisuel</br >Pro/Perso</a>
+  						<a href="pages/son.html">Son/Vidéo</a>
               <a href="pages/photo.html">Photos</a>
   						<a href="pages/visu.html">Dessins</a>
   					</div>
