--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
             <div class="dropdown">
             <div class="dropbtn">Travaux</div>
             <div class="dropdown-content">
-              <a href="son.html">Audiovisuel</br >Pro/Perso</a>
+              <a href="pages/son.html">Son/Vidéo</a>
               <a href="photo.html">Photos</a>
               <a href="visu.html">Dessins</a>
 
@@ -50,7 +50,7 @@
       <div id="rectd">                                    <!-- Cadre Etudes et formations -->
         <p class="titre">Études</p>
         <p class="text">
-		<p class="stitre">Master 1 Musicologie,<i> Orientation en Informatique Musicale</i></p>Université Jean Monnet Saint-Étienne, 2021-2022</br>
+		<p class="stitre">Master 1 Musicologie,<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet Saint-Étienne, 2021-2022</br>
           <p class="stitre">Licence Professionnelle,<i> Nouvelles Technologies du Son</i></p>Université de Toulon, 2020-2021</br>
          <p class="stitre">BTS Métiers de l'audiovisuel, <i>option métiers du son</i></p> Lycée Carnot - Cannes, 2018-2020</br> 
 
@@ -66,6 +66,12 @@
       <div id="rectexp">
         <p class="titre">EXPÉRIENCES PROFESSIONNELLES</p>
       <p class="text">
+	      <p class="stitre">GRRRND ZERO, Lyon</p>
+	      <i>Bénévole Technique, depuis 2022</i></br>
+Implication au sein de l'association pour de la réparation, de l'entretien et du travail de technicien son, concerts multicanaux et organisation d'évènements</br>
+        <b>Membre de l'AADA :</b> Armoire Autonome de Duplication Audio
+   
+	      
         <p class="stitre">DINOSAURES SARL</p> 
         <i>Stagiaire, du 27 Janvier 2020 au 28 Février 2020</i></br>
         Préparation de matériels de Tournages, entretien et réparation</br>
@@ -98,7 +104,7 @@
           <p class="stitre">Compétences</p> 
           Certification Dante Niveau 2</br>
           Familier aux interfaces : </br>
-          Yamaha, Digico, Avid</br>
+          Yamaha, Digico, Avid, Allen&Heath</br>
           Zaxcom, Sound Devices, Sonosax,</br>
           Sennheiser, Wysicom, Shure</br>
           RTS, Riedel, Clearcom</br>
@@ -115,7 +121,8 @@
           Illustrator, Premiere, Da Vinci</br>
           MakeMusic Finale, Sibelius</br>
           Logiciels de bureautique</br></br>
-          PureData / Resolume Arena</br>
+	<b>Max MSP/PureData</br>
+           Faust / Resolume Arena</br>
       </p>
       </div>
 
