--- a/pages/visu.html
+++ b/pages/visu.html
@@ -21,7 +21,7 @@
             <div class="dropdown">
             <div class="dropbtn">Travaux</div>
             <div class="dropdown-content">
-              <a href="son.html">Audiovisuel</br >Pro/Perso</a>
+              <a href="pages/son.html">Son/Vidéo</a>
               <a href="photo.html">Photos</a>
             </div>
             </div>
