--- a/pages/contact.html
+++ b/pages/contact.html
@@ -68,7 +68,7 @@
       <p class="text">
 	      <p class="stitre">GRRRND ZERO, Lyon</p>
 	      <i>Bénévole Technique, depuis 2022</i></br>
-Implication au sein de l'association pour de la réparation, de l'entretien et du travail de technicien son, concerts multicanaux et organisation d'évènements</br>
+Implication au sein de l'association pour de la réparation,</br> de l'entretien et du travail de technicien son,</br> concerts multicanaux et organisation d'évènements</br>
         <b>Membre de l'AADA :</b> Armoire Autonome de Duplication Audio
    
 	      
