--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
             <div class="dropdown">
             <div class="dropbtn">Travaux</div>
             <div class="dropdown-content">
-              <a href="pages/son.html">Son/Vidéo</a>
+              <a href="son.html">Son/Vidéo</a>
               <a href="photo.html">Photos</a>
               <a href="visu.html">Dessins</a>
 
