--- a/pages/son.html
+++ b/pages/son.html
@@ -34,6 +34,9 @@
           </li>
   		   </ul>
   		</div>	
+					
+					
+					<img id="vid" style="float: left;" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
 					<a id="vid2" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
 					<p class="legende2"> Perso/Organisation/Performance_Live_03/22 </p>
 					<a id="vid" href="https://cuttersanslameamoursanscoeur.bandcamp.com/album/chemin"><img width=200px src="../images/chemin.JPG" ></a>
