--- a/pages/son.html
+++ b/pages/son.html
@@ -36,9 +36,10 @@
   		</div>	
 					
 					
-					<img id="vid" style="float: left;" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
-					<a id="vid2" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
+					<a id="vid" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
 					<p class="legende2"> Perso/Organisation/Performance_Live_03/22 </p>
+                                        <img id="vid2" width="750" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
+				        <P class="legende2"> Art/Installation/Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine </p>
 					<a id="vid" href="https://cuttersanslameamoursanscoeur.bandcamp.com/album/chemin"><img width=200px src="../images/chemin.JPG" ></a>
 					<p class="legende"> Pro/Mastering/Cassette_Chemin</br>Pour_CutterSansLame_01/22 </p>
 					<a id="vid2" href="gliitchi.html"><img width=400px src="../images/gliitchi.JPG" ></a>
