--- a/pages/son.html
+++ b/pages/son.html
@@ -37,7 +37,7 @@
 					
 					
 					<a id="vid" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
-					<p class="legende2"> Perso/Organisation/Performance_Live_03/22 </p>
+					<p class="legende"> Perso/Organisation/Performance_Live_03/22 </p>
                                         <img id="vid2" width="750" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
 				        <P class="legende2"> Art/Installation/Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine </p>
 					<a id="vid" href="https://cuttersanslameamoursanscoeur.bandcamp.com/album/chemin"><img width=200px src="../images/chemin.JPG" ></a>
