--- a/pages/son.html
+++ b/pages/son.html
@@ -36,9 +36,9 @@
   		</div>	
 					
 					
-					<a id="vid2" width="750" href="https://livecoding5mars.github.io"><img width=35% src="https://livecoding5mars.github.io/5MARS.png" ></a>
+					<a id="vid2" width="750" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
 					<p class="legende2"> Perso/Organisation/Performance_Live_03/22 </p>
-					<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous"><img width=35% src="../images/gz-ncan.jpg"></a>
+					<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous"><img width=270px src="../images/gz-ncan.jpg"></a>
 					<p class="legende"> Pro/Ingénieur_du_Son</br>Mise_en_place_Quadriphonie_02/22
                                         <img id="vid2" width="70%" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
 				        <P class="legende2"> Art/Installation/Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine_01/22 </p>
