--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Il pleut</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="../styles/monstyle.css">
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
+				<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/fantasque-sans-mono" type="text/css"/>
 
+	</head>
+
+	<body background="../images/pluie/3.webp">
+		<div class="top">
+  			<ul class="list">
+  				<li class="menu">
+            <div class="dropdown">
+            <div class="dropbtn"><a href="../index.html">Accueil</a></div>
+            <div class="dropdown-content">
+          </li>
+          <li class="menu2">
+            <div class="dropdown">
+            <div class="dropbtn">Travaux</div>
+            <div class="dropdown-content">
+              <a href="photo.html">Photos</a>
+              <a href="visu.html">Dessins</a>
+            </div>
+            </div>
+            </li>
+
+            <li class="contact">
+            <div class="dropdown">
+            <div class="dropbtn"><a href="contact.html">Contact</a></div>
+            <div class="dropdown-content">
+          </li>
+  		   </ul>
+  		</div>	
+            
+            
+          </br>
+       </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
+<img alt="" src="../images/pluie/1.gif" >
+
+<img alt="" src="../images/pluie/2.gif" >
+
+<img alt="" src="../images/pluie/4.gif" >
+
+<img alt="" src="../images/pluie/5.gif" >
+
+<img alt="" src="../images/pluie/6.gif" >
