--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -38,12 +38,14 @@
             
           </br>
        </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
-<img alt="" src="../images/pluie/1.gif" >
+<img style="position:left;" src="../images/pluie/1.gif" >
+</br> </br> </br> </br>
 
-<img alt="" src="../images/pluie/2.gif" >
-
-<img alt="" src="../images/pluie/4.gif" >
-
-<img alt="" src="../images/pluie/5.gif" >
-
-<img alt="" src="../images/pluie/6.gif" >
+<img style="position:center;" src="../images/pluie/2.gif" >
+</br> </br> </br> </br>
+<img style="position:left;" src="../images/pluie/4.gif" >
+</br> </br> </br> </br>
+<img style="position:right;" src="../images/pluie/5.gif" >
+</br> </br> </br> </br>
+<img style="position:center;" src="../images/pluie/6.gif" >
+</br> </br> </br> </br>
