--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -38,14 +38,14 @@
             
           </br>
        </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
-<img style="position:left;" src="../images/pluie/1.gif" >
+<img style="padding-left:20%;" src="../images/pluie/1.gif" >
 </br> </br> </br> </br>
 
-<img style="position:center;" src="../images/pluie/2.gif" >
+<img style="padding-left:40%;" src="../images/pluie/2.gif" >
 </br> </br> </br> </br>
-<img style="position:left;" src="../images/pluie/4.gif" >
+<img style="padding-left:30%;" src="../images/pluie/4.gif" >
 </br> </br> </br> </br>
-<img style="position:right;" src="../images/pluie/5.gif" >
+<img style="padding-left:60%;" src="../images/pluie/5.gif" >
 </br> </br> </br> </br>
-<img style="position:center;" src="../images/pluie/6.gif" >
+<img style="padding-left:5%;" src="../images/pluie/6.gif" >
 </br> </br> </br> </br>
