--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -46,6 +46,6 @@
 <img style="padding-left:30%;" src="../images/pluie/4.gif" >
 </br> </br> </br> </br>
 <img style="padding-left:60%;" src="../images/pluie/5.gif" >
-</br> </br> </br> </br>J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF </br> </br>
+</br> </br> </br> </br><h1 style="color:lightblue">J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF </h1> </br> </br>
 <img style="padding-left:5%;" src="../images/pluie/6.gif" >
 </br> </br> </br> </br> 
