--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -39,10 +39,10 @@
           </br>
        </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
 <img style="padding-left:20%;" src="../images/pluie/1.gif" >
-</br> </br> </br> </br>
+</br> </br> </br> </br><h1 style="color:lightblue">IL PLEUt il PLeuT IlPLLEUT IL PLEUT ILPLEUT IL PLEUT IL PLEUT </h1> </br> </br>
 
 <img style="padding-left:40%;" src="../images/pluie/2.gif" >
-</br> </br> </br> </br>
+</br> </br> </br> </br> <h1 style="color:lightblue">MAISMIAMSIMAISMAIMA MAIAS MIASM MAIS MAISM MAISM MAIS MAIS mais</h1> </br> </br>
 <img style="padding-left:30%;" src="../images/pluie/4.gif" >
 </br> </br> </br> </br>
 <img style="padding-left:60%;" src="../images/pluie/5.gif" >
