--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -39,13 +39,13 @@
           </br>
        </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
 <img style="padding-left:20%; " src="../images/pluie/1.gif" >
-</br> </br> </br> </br><h1 style="color:lightblue">IL PLEUt il PLeuT IlPLLEUT IL PLEUT ILPLEUT IL PLEUT IL PLEUT </h1> </br> </br>
+</br> </br> </br> </br><h1 style="color:lightblue;  text-align: end; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">IL PLEUt il PLeuT IlPLLEUT IL PLEUT ILPLEUT IL PLEUT IL PLEUT </h1> </br> </br>
 
-<img style="padding-left:40%; text-align: end;" src="../images/pluie/2.gif" >
-</br> </br> </br> </br> <h1 style="color:lightblue">MAISMIAMSIMAISMAIMA MAIAS MIASM MAIS MAISM MAISM MAIS MAIS mais</h1> </br> </br>
-<img style="padding-left:30%; text-align: center;" src="../images/pluie/4.gif" >
+<img style="padding-left:40%; " src="../images/pluie/2.gif" >
+</br> </br> </br> </br> <h1 style="color:lightblue;  text-align: center; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">MAISMIAMSIMAISMAIMA MAIAS MIASM MAIS MAISM MAISM MAIS MAIS mais</h1> </br> </br>
+<img style="padding-left:30%;" src="../images/pluie/4.gif" >
 </br> </br> </br> </br>
 <img style="padding-left:60%;" src="../images/pluie/5.gif" >
-</br> </br> </br> </br><h1 style="color:lightblue">J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF </h1> </br> </br>
+</br> </br> </br> </br><h1 style="color:lightblue; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF </h1> </br> </br>
 <img style="padding-left:5%;" src="../images/pluie/6.gif" >
 </br> </br> </br> </br> 
