--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -49,3 +49,6 @@
 </br> </br> </br> </br><h1 style="color:lightblue; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF </h1> </br> </br>
 <img style="padding-left:5%;" src="../images/pluie/6.gif" >
 </br> </br> </br> </br> 
+
+<iframe style="box-shadow: 5px 10px red;"width="560" height="315" src="https://www.youtube.com/embed/IzZicmbJVJs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
