--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -50,5 +50,5 @@
 <img style="padding-left:5%;" src="../images/pluie/6.gif" >
 </br> </br> </br> </br> 
 
-<iframe style="box-shadow: 5px 10px red;"width="560" height="315" src="https://www.youtube.com/embed/IzZicmbJVJs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="box-shadow: 5px 10px red; padding-left:40%;"width="560" height="315" src="https://www.youtube.com/embed/IzZicmbJVJs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
