--- a/pages/son.html
+++ b/pages/son.html
@@ -38,11 +38,11 @@
 					<iframe id "vid" width="560" height="315" src="https://www.youtube.com/embed/9u3s2pjjwmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="legende"> Live/Algorave</br>10th_birthday</br>2022-03-20_16:40</p>
 					<a id="vid2" width="750" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
-					<p class="legende2"> Organisation/Performance_Live_03/22 </p>
+					<p class="legende2"> Organisation</br>Performance_Live_03/22 </p>
 					<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous"><img width=270px src="../images/gz-ncan.jpg"></a>
 					<p class="legende"> Ingénieur_du_Son</br>Mise_en_place_Quadriphonie_02/22
                                         <img id="vid2" width="70%" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
-				        <P class="legende2"> Art/Installation/Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine_01/22 </p>
+				        <P class="legende2"> Art/Installation</br>Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine_01/22 </p>
 					<a id="vid" href="https://cuttersanslameamoursanscoeur.bandcamp.com/album/chemin"><img width=200px src="../images/chemin.JPG" ></a>
 					<p class="legende"> Mastering/Cassette_Chemin</br>Pour_CutterSansLame_01/22 </p>
 					<a id="vid2" href="gliitchi.html"><img width=400px src="../images/gliitchi.JPG" ></a>
