--- a/pages/son.html
+++ b/pages/son.html
@@ -35,7 +35,7 @@
   		   </ul>
   		</div>	
 					
-					<iframe id "vid" width="560" height="315" src="https://www.youtube.com/embed/9u3s2pjjwmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/9u3s2pjjwmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="legende"> Live/Algorave</br>10th_birthday</br>2022-03-20_16:40</p>
 					<a id="vid2" width="750" href="https://livecoding5mars.github.io"><img width=270px src="https://livecoding5mars.github.io/5MARS.png" ></a>
 					<p class="legende2"> Organisation</br>Performance_Live_03/22 </p>
