--- a/pages/son.html
+++ b/pages/son.html
@@ -40,7 +40,7 @@
 					<a id="vid2" width="750" href="https://livecoding5mars.github.io"><img width=560px src="https://livecoding5mars.github.io/5MARS.png" ></a>
 					<p class="legende2"> Organisation/Performance_Live_03/22 </p>
 					<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous"><img width=270px src="../images/gz-ncan.jpg"></a>
-					<p class="legende"> Ingénieur_du_Son</br>Mise_en_place_Quadriphonie_02/22
+					<p class="legende"> Ingénieur_du_Son</br>Mise_en_place_Quadriphonie_02/22</p>
                                         <img id="vid2" width="70%" title="" onmouseover="this.src='../images/gif.gif';" onmouseout="this.src='/images/gif.jpg';" src="/images/gif.jpg" alt="gif">
 				        <P class="legende2"> Art/Installation</br>Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine_01/22 </p>
 					<a id="vid" href="https://cuttersanslameamoursanscoeur.bandcamp.com/album/chemin"><img width=200px src="../images/chemin.JPG" ></a>
