--- a/archive.html
+++ b/archive.html
@@ -49,9 +49,9 @@
 <p class="news">NEWS </p> -->
 
 		<a id="vid2" width="750" ><img width=560px src="https://livecoding5mars.github.io/5MARS.png" ></a>
-		<p class="legende2" href="https://livecoding5mars.github.io"> Grrrndzero.org</p>
+		<a class="legende2" href="https://livecoding5mars.github.io"> Grrrndzero.org</a>
 		<a id="vid" width="750"><img width=270px src="../images/gz-ncan.jpg"></a>
-		<p class="legende" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous" > Grrndzero.org</p>
+		<a class="legende" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous" > Grrndzero.org</a>
         
        </div>
   <div class="footer">@2022    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
