--- a/archive.html
+++ b/archive.html
@@ -45,11 +45,12 @@
 </br>
 </br>
 </br>
+<marquee class="legende" >Faut cliquer sur les images pour les archives, sur les légendes pour les infos.</marquee>
 <!--
 <p class="news">NEWS </p> -->
 
-		<a id="vid2" width="750" ><img width=560px src="https://livecoding5mars.github.io/5MARS.png" ></a>
-		<a class="legende2" href="https://livecoding5mars.github.io"> Grrrndzero.org</a>
+		<a id="vid2" width="750" href="archive/5mars.html" ><img width=560px ></a>
+		<a class="legende2" href="https://livecoding5mars.github.io"> https://livecoding5mars.github.io</a>
 		<a id="vid" width="750"><img width=270px src="../images/gz-ncan.jpg"></a>
 		<a class="legende" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous" > Grrndzero.org</a>
         
