--- a/pages/son.html
+++ b/pages/son.html
@@ -35,8 +35,8 @@
   		   </ul>
   		</div>			<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2313-ven-29-04-dymanche-jokari-undae-tropic-daesiidae"><img width=270px src="../images/26avril.jpg"></a>
 					<p class="legende"> Ingénieur_du_Son_04/22</p>
-					<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2279-sam-2-04-soiree-contre-la-maxi-prison-en-belgique"><img width=270px src="../images/2avril.jpg"></a>
-					<p class="legende"> Ingénieur_du_Son_04/22</p>
+					<a id="vid2" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2279-sam-2-04-soiree-contre-la-maxi-prison-en-belgique"><img width=270px src="../images/2avril.jpg"></a>
+					<p class="legende2"> Ingénieur_du_Son_04/22</p>
 					<iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/9u3s2pjjwmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="legende"> Live/Algorave</br>10th_birthday</br>2022-03-20_16:40</p>
 					<a id="vid2" width="750" href="https://livecoding5mars.github.io"><img width=560px src="https://livecoding5mars.github.io/5MARS.png" ></a>
