--- a/archive.html
+++ b/archive.html
@@ -49,13 +49,13 @@
 <marquee class="legende" >Faut cliquer sur les images pour les archives, sur les légendes pour les infos.</marquee>
 <!--
 <p class="news">NEWS </p> -->
-		<a id="vid2" href="archive/29avril.html" ><img width="30%" src="images/29avril.jpg"></a>
+		<a id="vid2" width="750px" href="archive/29avril.html" ><img width="750px" src="images/29avril.jpg"></a>
 		<a href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2313-ven-29-04-dymanche-jokari-undae-tropic-daesiidae"> <p  class="legende2" >Grrndzero.org</p></a>
-		<a id="vid2" href="archive/2avril.html" ><img  width="30%" src="images/2avril.jpg"></a>
+		<a id="vid2" width="750px" href="archive/2avril.html" ><img  width="750px" src="images/2avril.jpg"></a>
 		<a href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2279-sam-2-04-soiree-contre-la-maxi-prison-en-belgique"> <p  class="legende2" >Grrndzero.org</p></a>
-		<a id="vid2" href="archive/5mars.html" ><img width="30%" src="https://livecoding5mars.github.io/5MARS.png"></a>
+		<a id="vid2" width="750px" href="archive/5mars.html" ><img width="750px" src="https://livecoding5mars.github.io/5MARS.png"></a>
 		<a href="https://livecoding5mars.github.io"> <p  class="legende2" >https://livecoding5mars.github.io</p></a>
-		<a id="vid" href="archive/25fevrier.html" ><img width="30%" src="images/gz-ncan.jpg"></a>
+		<a id="vid" width="750px" href="archive/25fevrier.html" ><img width="750px" src="images/gz-ncan.jpg"></a>
 		<a href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2259-ven-25-02-sortie-de-la-reedition-de-nos-corps-a-nous" > <p class="legende">Grrndzero.org</p></a>
         
        </div>
