--- a/archive.html
+++ b/archive.html
@@ -45,7 +45,7 @@
 </br>
 </br>
 </br>
-<div class="titre">Bienvenue sur mon sites d'Archives et de Bootlegs </div>
+<div class="titre">Bienvenue sur mon site d'Archives et de Bootlegs </div>
 <marquee class="legende" >Faut cliquer sur les images pour les archives, sur les légendes pour les infos.</marquee>
 <!--
 <p class="news">NEWS </p> -->
