--- a/archive.html
+++ b/archive.html
@@ -2,42 +2,12 @@
 <html>
     <link rel="stylesheet" type="text/css" href="styles/monstyle.css">
 	<head>
-		<title>Rémi Georges</title>
+		<title>ARCHIVE</title>
 		<meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/favicon.png" />
 		<!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/fantasque-sans-mono" type="text/css"/> -->
 	</head>
-	<!-- Menu deroulant -->
-	<body background="images/fond.png">
-  			
-		<div class="top">
-  			<ul class="list">
-  			<li class="menu">
-  					<div class="dropdown">
-  					<div class="dropbtn"><a href="index.html">Accueil</a></div>
-  					<div class="dropdown-content">
-          </li>
 
-  				<li class="menu2">
-  					<div class="dropdown">
-  					<div class="dropbtn">Travaux</div>
-  					<div class="dropdown-content">
-  						<a href="pages/son.html">Son/Vidéo</a>
-              <a href="pages/photo.html">Photos</a>
-  						<a href="pages/visu.html">Dessins</a>
-  					</div>
-  					</div>
-   		    	</li>
-
-						<li class="contact">
-  					<div class="dropdown">
-  					<div class="dropbtn"><a href="pages/contact.html">Contact</a></div>
-  					<div class="dropdown-content">
-          </li>
-						
-  		   </ul>
-  		</div>
-	
 <!-- INTro -->
 </br>
 </br>
