--- a/gliitchi/gliitchi.html
+++ b/gliitchi/gliitchi.html
@@ -107,7 +107,13 @@ PARAMETERS
 
 </br></br></br></br>
 </br></br></br></br>
-  		</div>
+  		</div></br></br></br></br>
+</br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br>
+</br></br></br></br>
  <main>
                 <audio id="player" src="CleanGuitarRiff.mp3" controls
                         loop crossOrigin="anonymous">
