--- a/gliitchi/gliitchi.html
+++ b/gliitchi/gliitchi.html
@@ -115,13 +115,15 @@ PARAMETERS
 </br></br></br></br></br></br></br></br>
 </br></br></br></br>
  <main>
+	 
+	 <div id="rectg">
                 <audio id="player" src="CleanGuitarRiff.mp3" controls
                         loop crossOrigin="anonymous">
                 </audio>
                 <div id="mount"></div>
         </main>
         <script type="module" src="host.js"></script>
-
+	 </div>
 
 
   <div class="footer">01/2022    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
