--- a/gliitchi/gliitchi.html
+++ b/gliitchi/gliitchi.html
@@ -117,10 +117,9 @@ PARAMETERS
  <main>
 	 
 	 <div id="rectg">
-                <audio id="player" src="CleanGuitarRiff.mp3" controls
+                <audio id="player" src="../../images/Brique-Lait.mp3" controls
                         loop crossOrigin="anonymous">
                 </audio>
-	<iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/qNf9nzvnd1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loop crossOrigin="anonymous"></iframe>
                 <div id="mount"></div>
         </main>
         <script type="module" src="host.js"></script>
