--- a/pages/son.html
+++ b/pages/son.html
@@ -47,7 +47,7 @@
 				        <P class="legende2"> Art/Installation</br>Performance</br>Gravure_sur_scie_circulaire/mix_sur_platine_01/22 </p>
 					<a id="vid" href="https://cuttersanslameamoursanscoeur.bandcamp.com/album/chemin"><img width=200px src="../images/chemin.JPG" ></a>
 					<p class="legende"> Mastering/Cassette_Chemin</br>Pour_CutterSansLame_01/22 </p>
-					<a id="vid2" href="gliitchi.html"><img width=400px src="../images/gliitchi.JPG" ></a>
+					<a id="vid2" href="../gliitchi/gliitchi.html"><img width=400px src="../images/gliitchi.JPG" ></a>
 					<p class="legende2"> Plug_in/GlitchEffects_Plug-in</br>codé_en_Faust_01/22 </p>
 					<iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/rmUTe22FF5s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="legende"> Live/The_Longest_Night</br>Winter_Solstice_Marathon</br>TidalCycles_Cycle#82 _12/21 </p>
