--- a/pages/son.html
+++ b/pages/son.html
@@ -33,7 +33,9 @@
             <div class="dropdown-content">
           </li>
   		   </ul>
-  		</div>			<a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2313-ven-29-04-dymanche-jokari-undae-tropic-daesiidae"><img width=270px src="../images/29avril.jpg"></a>
+  		</div>			<a id="vid2" width="750" href="https://grrrndzero.org/index.php/agenda2/agenda-passe/2336-sam-04-06-presentation-de-l-aada" ><img width=270px  src="../images/AADA.jpg"></a>
+                                        <p class="legende">Membre_de_l'AADA_06/04</p>
+                                        <a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2313-ven-29-04-dymanche-jokari-undae-tropic-daesiidae"><img width=270px src="../images/29avril.jpg"></a>
 					<p class="legende"> Ingénieur_du_Son_04/22</p>
 					<a id="vid2" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2279-sam-2-04-soiree-contre-la-maxi-prison-en-belgique"><img width=270px src="../images/2avril.jpg"></a>
 					<p class="legende2"> Ingénieur_du_Son_04/22</p>
