--- a/pages/nancy.html
+++ b/pages/nancy.html
@@ -60,7 +60,7 @@
       </div>
 
       <div> 
-       <img id="imageprofil" src="../images/profil.jpg"  >    <!-- Image de profil -->
+       <img id="imageprofil" src="../images/IMG_20220629_092736.jpg"  >    <!-- Image de profil -->
       </div>
 
       
