--- a/pages/nancy.html
+++ b/pages/nancy.html
@@ -52,9 +52,9 @@
          <p class="stitre"> Rose-anna, <i>Rose</i> </p>mon amour je t'aime énormément </br><i>MI </i>
       </div>
 
-      <div> 
+      <div id="imageprofil" > 
        <img id="imageprofil" src="../images/IMG_20220629_092736.jpg"  >  
-Photo de Nancy, mais sans toi ma minette :c <!-- Image de profil -->
+<p>Photo de Nancy, mais sans toi ma minette :c <!-- Image de profil</p> -->
       </div>
 
       
