--- a/pages/son.html
+++ b/pages/son.html
@@ -34,7 +34,7 @@
           </li>
   		   </ul>
   		</div>			
-					<iframe id="vid2" width="560" height="315" src="https://www.youtube.com/watch?v=nR2wIfNl7FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid2" width="560" height="315" src="https://www.youtube.com/watch?v=nR2wIfNl7FI&" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="legende2"> Live</br>Live à l'orgue</br>2022-09-01</p>
 					
 					<iframe id="vid" width="560" height="315" src="https://www.youtube.com/watch?v=REZo_SuifhY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
