--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,15 @@
       <div id="rectexp">
         <p class="titre">EXPÉRIENCES PROFESSIONNELLES</p>
       <p class="text">   
-	      
+	
+	<p class="stitre">NOVELTY - Famusique</p> 
+        <i>Intermittent, Depuis 2022</i></br>
+        <b> Technicien Son</b> 
+	<p class="stitre">GRAME, Centre National de Création Musicale, Lyon</p> 
+        <i>Stagiaire en Recherche, Avril 2022</i></br>
+        Intégration de Faust2Tidalcycles au sein de l'IDE et du Langague Faust</br>
+        <b>faust2tidalcycles :</b> Compilateur d'effets audio Faust pour une intégration au sein du</br>language de Live-coding Tidalcycles.</br>
+</br> <a href='https://github.com/grame-cncm/faust/blob/master-dev/tools/faust2appls/faust2tidalcycles'>Lien Github
         <p class="stitre">DINOSAURES SARL</p> 
         <i>Stagiaire, du 27 Janvier 2020 au 28 Février 2020</i></br>
         Préparation de matériels de Tournages, entretien et réparation</br>
