--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,7 +50,7 @@
       <div id="rectd">                                    <!-- Cadre Etudes et formations -->
         <p class="titre">Études</p>
         <p class="text">
-		<p class="stitre">Master 1 Musicologie,<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet Saint-Étienne, 2021-2022</br>
+		<p class="stitre">Master<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet Saint-Étienne, 2021-2022</br>
           <p class="stitre">Licence Professionnelle,<i> Nouvelles Technologies du Son</i></p>Université de Toulon, 2020-2021</br>
          <p class="stitre">BTS Métiers de l'audiovisuel, <i>option métiers du son</i></p> Lycée Carnot - Cannes, 2018-2020</br> 
 
