--- a/pages/contact.html
+++ b/pages/contact.html
@@ -105,6 +105,8 @@
         <p class="titre">Compétences et Logiciels</p>
         <p class="text">
           <p class="stitre">Compétences</p> 
+		   <b>Programmation informatique appliqué à l'audio : </b></br>
+	Python, Faust, Max/MSP, PureData...
           Certification Dante Niveau 2</br>
           Familier aux interfaces : </br>
           Yamaha, Digico, Avid, Allen&Heath</br>
@@ -124,7 +126,7 @@
           Illustrator, Premiere, Da Vinci</br>
           MakeMusic Finale, Sibelius</br>
           Logiciels de bureautique</br></br>
-	<b>Max MSP/PureData</br>
+	
            Faust / Resolume Arena</br>
       </p>
       </div>
