--- a/pages/contact.html
+++ b/pages/contact.html
@@ -122,12 +122,13 @@
           Izotope RX</br>
           Logic, Ableton Live, </br>
           Reaper, Fl studio... </br></br>
+		  Resolume Arena</br>
           <b>Photoshop</b></br>
           Illustrator, Premiere, Da Vinci</br>
           MakeMusic Finale, Sibelius</br>
           Logiciels de bureautique</br></br>
 	
-           Faust / Resolume Arena</br>
+          
       </p>
       </div>
 
