--- a/pages/contact.html
+++ b/pages/contact.html
@@ -106,7 +106,7 @@
         <p class="text">
           <p class="stitre">Compétences</p> 
 		   <b>Programmation informatique appliqué à l'audio : </b></br>
-	Python, Faust, Max/MSP, PureData...
+	Python, Faust, Max/MSP, PureData...</br></br>
           Certification Dante Niveau 2</br>
           Familier aux interfaces : </br>
           Yamaha, Digico, Avid, Allen&Heath</br>
