Update and rename contact2.html to contact.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,11 +48,11 @@
       </div>
 
       <div id="rectd">                                    <!-- Cadre Etudes et formations -->
-        <p class="titre">Études</p>
+        <p class="titre">Diplômes</p>
         <p class="text">
-		<p class="stitre">Master<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet Saint-Étienne, 2021-2022</br>
-          <p class="stitre">Licence Professionnelle,<i> Nouvelles Technologies du Son</i></p>Université de Toulon, 2020-2021</br>
-         <p class="stitre">BTS Métiers de l'audiovisuel, <i>option métiers du son</i></p> Lycée Carnot - Cannes, 2018-2020</br> 
+		<p class="stitre">Master<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet - Saint-Étienne, 2021-2023</br>
+          <p class="stitre">Licence Professionnelle,<i> Nouvelles Technologies du Son</i></p>UFR Ingémedia - Toulon, 2020-2021</br>
+         <p class="stitre">BTS Métiers de l'audiovisuel, <i>option métiers du son</i></p>Lycée Carnot - Cannes, 2018-2020</br> 
 
          <p class="stitre"> Baccalauréat Scientifique Sciences de l'ingénieur,</br><i>Spécialité Informatique et Sciences du Numérique</i> </p>Lycée Langevin - La-Seyne-sur-mer, Promotion 2018</br>
         </p>
@@ -64,7 +64,7 @@
       </div>
 
       <div id="rectexp">
-        <p class="titre">EXPÉRIENCES PROFESSIONNELLES</p>
+        <p class="titre">Parcours Professionnel</p>
       <p class="text">   
 	
 	<p class="stitre">NOVELTY - Famusique</p> 
@@ -75,7 +75,10 @@
         Intégration de Faust2Tidalcycles au sein de l'IDE et du Langague Faust</br>
         <b>faust2tidalcycles :</b> Compilateur d'effets audio Faust pour une intégration au sein du</br>language de Live-coding Tidalcycles.</br>
 	</br> <a href='https://github.com/grame-cncm/faust/blob/master-dev/tools/faust2appls/faust2tidalcycles'>Lien Github</a>
-        <p class="stitre">DINOSAURES SARL</p> 
+        <p class="stitre">Cinéfabrique</p> 
+        <i>Intermittent, Juillet-Août 2022</i></br>
+        <b>Perchman - Assistant Son</b> 
+	<p class="stitre">DINOSAURES SARL</p> 
         <i>Stagiaire, du 27 Janvier 2020 au 28 Février 2020</i></br>
         Préparation de matériels de Tournages, entretien et réparation</br>
         <b>Assistant Son et Perchman :</b> émission musicale "Carte Blanche à Ninho" au Bataclan pour France 2,</br> Caméras cachées pour les émissions ''30ans Surprise Sur Prise!'' et "La Grande Rassrah 5" pour France 2 et C8,</br>  courts métrages et série Canal+ "Odah et Dako" épisode 9.</br> Captation MasterClass de Clarinette à la salle Cortot pour les Clarinettes Buffet-Crampon.</br>
@@ -105,13 +108,13 @@
         <p class="titre">Compétences et Logiciels</p>
         <p class="text">
           <p class="stitre">Compétences</p> 
-		   <b>Programmation informatique appliqué à l'audio : </b></br>
-	Python, Faust, Max/MSP, PureData...</br></br>
+		<b>Programmation informatique appliqué à l'audio : </b></br>
+		Python(+), Faust(++), Max/MSP//PureData(++), C++(-)</br></br>
           Certification Dante Niveau 2</br>
           Familier aux interfaces : </br>
           Yamaha, Digico, Avid, Allen&Heath</br>
           Zaxcom, Sound Devices, Sonosax,</br>
-          Sennheiser, Wysicom, Shure</br>
+          Sennheiser, Wisycom, Shure</br>
           RTS, Riedel, Clearcom</br>
           L-Acoustics, MeyerSound</br>
           <p class="stitre">Langues</p>
