--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,11 +20,11 @@
            </li>
             <li class="menu2">
             <div class="dropdown">
-            <div class="dropbtn">Travaux</div>
+            <div class="dropbtn"><a href="son.html">Travaux</a></div>
             <div class="dropdown-content">
-              <a href="son.html">Son/Vidéo</a>
+             <!-- <a href="son.html">Son/Vidéo</a>
               <a href="photo.html">Photos</a>
-              <a href="visu.html">Dessins</a>
+              <a href="visu.html">Dessins</a -->
 
             </div>
             </div>
