--- a/pages/son.html
+++ b/pages/son.html
@@ -19,7 +19,7 @@
           </li>
           <li class="menu2">
             <div class="dropdown">
-            <div class="dropbtn">Travaux</div>
+            <div class="dropbtn"><a href="photo.html">Travaux</a></div>
             <div class="dropdown-content">
              <!-- <a href="photo.html">Photos</a>
               <a href="visu.html">Dessins</a> -->
