--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
   				<li class="menu2">
   					<div class="dropdown">
-  					<div class="dropbtn">Travaux</div>
+						<div class="dropbtn"><a href="pages/son.html">Travaux</a></div>
   					<div class="dropdown-content">
-  						<a href="pages/son.html">Son/Vidéo</a>
-              <a href="pages/photo.html">Photos</a>
-  						<a href="pages/visu.html">Dessins</a>
+  						<!-- <a href="pages/son.html">Son/Vidéo</a>
+             					<a href="pages/photo.html">Photos</a>
+  						<a href="pages/visu.html">Dessins</a> -->
   					</div>
   					</div>
    		    	</li>
