--- a/pages/son.html
+++ b/pages/son.html
@@ -31,14 +31,14 @@
             <div class="dropbtn"><a href="contact.html">Contact</a></div>
             <div class="dropdown-content">
           </li>
-            <li class="contact">
+            <li class="menu2">
             <div class="dropdown">
             <div class="dropbtn"><a href="https://ralt144mi.github.io">Live-Coding</a></div>
             <div class="dropdown-content">
           </li>
   		   </ul>
-  		</div>			<a id="vid" width"750" href ="http://www.vahansoghomonian.net/work/org-rchbrn/"><img width=270px src="http://www.vahansoghomonian.net/img/ORG-RCHBRN/1.jpg"></a>
-					<p class="legende"> Réalisation - Composition Informatique du mode Autonome de L'installation, Drôme Provençale </br> 2023-2023</p>
+  		</div>			<a id="vid" width"750" href ="http://www.vahansoghomonian.net/work/org-rchbrn/"><img width=750px src="http://www.vahansoghomonian.net/img/ORG-RCHBRN/1.jpg"></a>
+		  <p class="legende"> Réalisation - Composition Informatique du mode Autonome </br> de l'ORG de Vahan Soghomonian, Drôme Provençale </br> 2023-2023</p>
 					<iframe id="vid2" width="560" height="315" src="https://www.youtube.com/embed/nR2wIfNl7FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="legende2"> Live</br>Live à l'orgue</br>2022-09-01</p>
 					
