--- a/pages/son.html
+++ b/pages/son.html
@@ -27,7 +27,7 @@
             </div>
             </li>
 	</li>
-            <li class="menu2">
+            <li class="livecoding">
             <div class="dropdown">
             <div class="dropbtn"><a href="https://ralt144mi.github.io">Live-Coding</a></div>
             <div class="dropdown-content">
