--- a/pages/son.html
+++ b/pages/son.html
@@ -27,9 +27,9 @@
             </div>
             </li>
 	</li>
-            <li class="livecoding">
+            <li class="menu">
             <div class="dropdown">
-            <div class="dropbtn"><a href="https://ralt144mi.github.io">Live-Coding</a></div>
+            <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
             <div class="dropdown-content">
           </li>
 	  <li class="contact">
