--- a/pages/pluie.html
+++ b/pages/pluie.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body background="../images/pluie/3.webp">
-		<div class="top">
+	<!--	<div class="top">
   			<ul class="list">
   				<li class="menu">
             <div class="dropdown">
@@ -32,8 +32,8 @@
             <div class="dropbtn"><a href="contact.html">Contact</a></div>
             <div class="dropdown-content">
           </li>
-  		   </ul>
-  		</div>	
+  		   </ul> 
+  		</div>	-->
             
             
           </br>
