--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
   					</div>
   					</div>
    		    	</li>
-						 <li class="menu">
+						 <li class="menu2">
             <div class="dropdown">
             <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
-            <div class="dropdown-content">
+            <div class="dropdown-content"></div>
+  					</div>
           </li>
 
 						<li class="contact">
   					<div class="dropdown">
   					<div class="dropbtn"><a href="pages/contact.html">Contact</a></div>
-  					<div class="dropdown-content">
+  					<div class="dropdown-content"></div>
+  					</div>
           </li>
 						
   		   </ul>
