--- a/pages/noel.html
+++ b/pages/noel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Il pleut</title>
+		<title>C'est Noel la fete du père_noel</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../styles/monstyle.css">
     <link rel="icon" type="image/png" href="../images/favicon.png" />
@@ -9,7 +9,7 @@
 
 	</head>
 
-	<body background="../images/noel/3.jpg">
+	<body background="../images/noel/3.webp">
 	<!--	<div class="top">
   			<ul class="list">
   				<li class="menu">
@@ -39,16 +39,14 @@
           </br>
        </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
 <img style="padding-left:20%; " src="../images/noel/1.gif" >
-</br> </br> </br> </br><h1 style="color:lightblue;  text-align: end; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">IL PLEUt il PLeuT IlPLLEUT IL PLEUT ILPLEUT IL PLEUT IL PLEUT </h1> </br> </br>
-<iframe style="box-shadow: 5px 10px red; padding-left:40%;"width="560" height="315" src="https://youtu.be/jSQ6u6XLYPI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<img style="padding-left:40%; " src="../images/noel/2.gif" >
-</br> </br> </br> </br> <h1 style="color:lightblue;  text-align: center; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">MAISMIAMSIMAISMAIMA MAIAS MIASM MAIS MAISM MAISM MAIS MAIS mais</h1> </br> </br>
+</br> </br> </br> </br><h1 style="color:lightblue;  text-align: end; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">JOYEUEJEOUEUJOYEUX JOEYUX NOEUEKL NOEL NOEL</h1> </br> </br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jSQ6u6XLYPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><img style="padding-left:40%; " src="../images/noel/2.gif" >
+</br> </br> </br> </br> <h1 style="color:lightblue;  text-align: center; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">PRENER SOIND DE VOUS__ ET PASSEEE DE BONNESES FETES :)   </h1> </br> </br>
 <img style="padding-left:30%;" src="../images/pluie/4.gif" >
 </br> </br> </br> </br>
 <img style="padding-left:60%;" src="../images/noel/5.gif" >
-</br> </br> </br> </br><h1 style="color:lightblue; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF J'ai SOIF </h1> </br> </br>
+</br> </br> </br> </br><h1 style="color:lightblue; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄 </h1> </br> </br>
 <img style="padding-left:5%;" src="../images/noel/6.gif" >
 </br> </br> </br> </br> 
 
-<iframe style="box-shadow: 5px 10px red; padding-left:40%;"width="560" height="315" src="https://www.youtube.com/watch?v=ej62pZ1qFK4" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ej62pZ1qFK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
