--- a/pages/noel.html
+++ b/pages/noel.html
@@ -42,7 +42,7 @@
 </br> </br> </br> </br><h1 style="color:lightblue;  text-align: end; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">JOYEUEJEOUEUJOYEUX JOEYUX NOEUEKL NOEL NOEL</h1> </br> </br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jSQ6u6XLYPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><img style="padding-left:40%; " src="../images/noel/2.gif" >
 </br> </br> </br> </br> <h1 style="color:lightblue;  text-align: center; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">PRENER SOIND DE VOUS__ ET PASSEEE DE BONNESES FETES :)   </h1> </br> </br>
-<img style="padding-left:30%;" src="../images/pluie/4.gif" >
+<img style="padding-left:30%;" src="../images/noel/4.gif" >
 </br> </br> </br> </br>
 <img style="padding-left:60%;" src="../images/noel/5.gif" >
 </br> </br> </br> </br><h1 style="color:lightblue; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄🎄 </h1> </br> </br>
